my first commit

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ should have a prior knowledge of git and version control, in the process we deci
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#new">New</a></li>
       </ul>
     </div>
   </nav>
@@ -53,14 +54,14 @@ should have a prior knowledge of git and version control, in the process we deci
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0 text-center">
-          <span class="text-primary">Hitik</span>
-          saini
+          <span class="text-primary">Abhishek </span>
+          Seth
         </h1>
         <div class="subheading mb-5 text-center">
           Address, email, phone
-          <a href="mailto:hitik9045saini@gmail.com">hitik9045saini@gmail.com</a>
+          <a href="mailto:abhishek.mcent@gmail.com">abhishek.mcent@gmail.com</a>
         </div>
-        <img class="top-img " src="sources/my_website1.svg" alt="">
+        <img class="top-img " src="sources/my_website.svg" alt="">
         <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <div class="social-icons">
@@ -178,6 +179,12 @@ should have a prior knowledge of git and version control, in the process we deci
         </ul>
       </div>
     </section>
+    <section id="new">
+
+      <h2>This is the new portfolio Section</h2>
+
+    </section>
+
     <hr class="m-0" />
     <!-- Interests-->
     <section class="resume-section" id="projects">
@@ -244,7 +251,7 @@ should have a prior knowledge of git and version control, in the process we deci
             </ul>
           </div>
           <div class="col-md-6">
-            <img class="awards-img " src="sources/certificate1.svg" alt="">
+            <img class="awards-img " src="sources/certificate.svg" alt="">
           </div>
         </div>
       </div>
